# tanc

./: .gitignore  Makefile  README.md  new.py  profiling.py  pyproject.toml  requirements.txt  setup.py  test.py  test_array.cpp
.github/workflows/: build_sdist.yml  build_wheels.yml
cpp/: Makefile  iau1980.hpp  main.cpp  math.hpp  python_bindings.cpp  time.hpp
docs/source/: conf.py  index.rst  modules.rst  sidereal.rst
src/: math.hpp  python_bindings.cpp  sidereal.pyi  time.hpp
tests/: test.py
