
[project]
name = "sidereal"
version = "0.0.7"
authors = [{name = "Liam Robinson", email = "liamers127@gmail.com"}]
description = "Time and coordinate systems for astrodynamics"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.19.2",
]

[project.urls]
Homepage = "https://example.com"
Repository = "https://github.com/liamrobinson1/sidereal"
Documentation = "https://yourprojectdocs.com"

[build-system]
requires = ["setuptools>=42", "wheel", "numpy>=1.19.2", "pybind11>=2.11.0", "eigency>=1.6.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = ["cp312-*", "cp311-*", "cp310-*", "cp39-*"]
skip = ["*win32*"]

# Build `universal2` and `arm64` wheels on an Intel runner.
# Note that the `arm64` wheel and the `arm64` part of the `universal2`
# wheel cannot be tested in this configuration.
[tool.cibuildwheel.macos]
archs = ["x86_64", "universal2", "arm64"]

# On an Linux Intel runner with qemu installed, build Intel and ARM wheels
[tool.cibuildwheel.linux]
archs = ["auto", "aarch64"]