
[project]
name = "sidereal"
version = "0.0.16"
authors = [{name = "Liam Robinson", email = "liamers127@gmail.com"}]
description = "Time and coordinate systems for astrodynamics"
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/liamrobinson1/sidereal"

[build-system]
requires = ["setuptools>=42", "wheel", "numpy>=1.19.2", "pybind11>=2.11.0", "eigency>=1.6.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"